[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "socialvoid-cli"
path = "src/main.rs"

[dependencies]
"client" = { path = "../client" }
"rawclient" = { path = "../rawclient" }
"session" = { path = "../session" }
structopt = "0.3.23"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.67"
shellexpand = "2.1.0"
tokio = {version = "1.11.0", features = ["full"]}
rpassword = "5.0.1"