[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = {path = "../network"}
session = {path = "../session"}
rawclient = {path = "../rawclient"}
tokio = {version = "1.11.0", features = ["full"]}
types = {path = "../types"}
help = {path = "../help"}
serde_json = "1.0.67"