[package]
name = "socialvoid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socialvoid_network = {path = "../network"}
socialvoid_session = {path = "../session"}
socialvoid_rawclient = {path = "../rawclient"}
tokio = {version = "1.11.0", features = ["full"]}
socialvoid_types = {path = "../types"}
socialvoid_help = {path = "../help"}
serde_json = "1.0.67"