[package]
name = "socialvoid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socialvoid_rawclient = {path = "../rawclient"}
socialvoid_types = {path = "../types"}
tokio = {version = "1.11.0", features = ["full"]}
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive","rc"]}
bincode = "1.3.3"
rand = "0.8.4"
sha256 = "1.0.2"
byteorder = "1.4.3"
rust-crypto = "0.2.36"
pad = "0.1.6"
base32 = "0.4.0"