[package]
name = "socialvoid_help"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socialvoid_rawclient = {path = "../rawclient"}
socialvoid_types = {path = "../types"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.67"
tokio = {version = "1.11.0", features = ["rt"]}