[package]
name = "jsonrpc2-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.11.0", features = ["full"]}
reqwest = {version = "0.11.4", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.67"