[package]
name = "rawclient"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc2-client = {path = "../jsonrpc2-client"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.67"
enum_primitive = "0.1.1"