[package]
name = "rawclient"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc2-client = {path = "../jsonrpc2-client"}
types = {path = "../types" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.67"
enum_primitive = "0.1.1"
reqwest = {version = "0.11.4", features = ["multipart", "stream"]}
tokio-util = {version = "0.6.8", features = ["codec"]}
tokio = {version = "1.11.0", features = ["full"]}
futures = "0.3.17"