[package]
name = "socialvoid_session"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socialvoid_rawclient = {path = "../rawclient"}
socialvoid_types = {path = "../types"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.67"
sha256 = "1.0.2"
rand = "0.8.4"
tokio = {version = "1.11.0", features = ["full"]}
rust-crypto = "0.2.36"
byteorder = "1.4.3"
pad = "0.1.6"
base32 = "0.4.0"