[package]
name = "socialvoid_types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.67"
tokio = {version = "1.11.0", features = ["full"]}
chrono = "0.4.19"